k8s/apps/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: apps
spec:
  selector:
    app: pgadmin
  ports:
    - port: 80
      targetPort: 80
