k8s/apps/pgadmin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pgadmin.tugy.dev`)
      kind: Rule
      services:
        - name: pgadmin
          port: 80
